--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://aukeller.github.io/Shopping-Cart",
+  "homepage": "https://github.com/aukeller/shopping-cart",
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
