--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://github.com/aukeller/shopping-cart",
   "name": "shopping-cart",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
